jlamontSC-test/src/objects/Club_Event_Type__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Club Event Type</label>
    <nameField>
        <displayFormat>CET-{000000}</displayFormat>
        <label>Club Event Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Club Event Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>